--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,28 @@
 {
   "compilerOptions": {
+    "target": "es2019",
     "module": "commonjs",
+    "rootDir": "./",
+    "outDir": "./dist",
+    "baseUrl": "./src",
     "noImplicitAny": true,
     "removeComments": true,
     "preserveConstEnums": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "incremental": true,
+    "strict": true,
+    "resolveJsonModule": true,
+    "strictPropertyInitialization": false,
+    "allowJs": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true
+  },
+  "paths": {
+    "@/*": ["*"],
+    "@users/*": ["users/*"]
   },
   "include": [
     "src/**/*"
