--- a/package.json
+++ b/package.json
@@ -4,19 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "rimraf dist && tsc -p tsconfig-build.json",
     "dev": "ts-node-dev -r tsconfig-paths/register --no-notify --inspect --transpile-only --ignore-watch node_modules src/index.ts",
     "start": "ts-node src/index.ts",
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
     "test:verbose": "jest --passWithNoTests --runInBand",
-    "test:unit": "npm test -- --watch --config jest-unit-config.js",
-    "test:unit:verbose": "npm run test:verbose -- --watch --config jest-unit-config.js",
-    "test:integration": "npm test -- --watch --config jest-integration-config.js",
-    "test:integration:verbose": "npm run test:verbose -- --watch --config jest-integration-config.js",
-    "test:ci": "npm test -- --coverage",
     "test:clear": "jest --clearCache && rimraf coverage"
   },
   "dependencies": {
+    "reflect-metadata": "^0.1.13",
     "tslib": "^1.13.0",
     "tsyringe": "^4.3.0"
   },
