--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:clear": "jest --clearCache && rimraf coverage"
   },
   "dependencies": {
+    "mongodb": "^3.6.3",
     "reflect-metadata": "^0.1.13",
     "tslib": "^1.13.0",
     "tsyringe": "^4.3.0"
@@ -18,6 +19,7 @@
   "devDependencies": {
     "@shelf/jest-mongodb": "^1.2.1",
     "@types/jest": "^26.0.6",
+    "@types/mongodb": "^3.5.33",
     "jest": "^26.1.0",
     "rimraf": "^3.0.2",
     "ts-jest": "^26.1.3",
